--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,6 @@
 ---
-import Account from "./Account";
-import  SignUp  from "./SignUp.jsx";
-import "./styles.css"
+import  SignUp  from "./SignUp";
+import "./Styles.css"
 ---
 
 <html lang="en">
@@ -13,7 +12,6 @@ import "./styles.css"
 		<title>Astro</title>
 	</head>
 	<body>
-		
-		<Account client:load/>
+		<SignUp client:load/>
 	</body>
 </html>
