--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import  SignUp  from "./SignUp";
+import  SignUp  from "./SignUp.jsx";
 import "./styles.css"
 ---
 
@@ -12,6 +12,7 @@ import "./styles.css"
 		<title>Astro</title>
 	</head>
 	<body>
+		
 		<SignUp client:load/>
 	</body>
 </html>
