--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+::-webkit-scrollbar 
+{
+    width: 8px;
+    
+}
+::-webkit-scrollbar-track 
+{
+    background: #f1f1f1;
+    
+}
+::-webkit-scrollbar-thumb 
+{
+    background:rgba(42,41,41,0.4);
+    border-radius: 5px;
+}
+::-webkit-scrollbar-thumb:hover 
+{
+    background:rgba(42,41,41,0.6);
+}
